tests/fixtures/invalid/import_cycle_b.pi
# Ciclo de imports: B importa A
project cycle_b
   import cycle_a

task helper
   goal help
